--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,11 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <form method="post" action="/">
+      <label for="phrase">Enter your phrase:</label>
+      <p><input type="text" id="phrase" name='user_phrase'><p>
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
